--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+html {
+  box-sizing: border-box;
+}
 
 
 .App-header {
@@ -15,3 +17,31 @@
   color: white;
 }
 
+li {
+  list-style: none;
+}
+
+.folderItem {
+  background-color: rgb(55, 185, 55);
+  width: 200px;
+  border: 1px solid black;
+  padding: 20px;
+  color: white;
+  font-size: 1.3em;
+}
+.folderItem:hover {
+  background-color: rgb(71, 42, 150);
+  cursor: pointer;
+}
+
+.noteItem {
+  background-color: gray;
+  width: 50%;
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+button {
+  margin: 10px;
+}
